2003-01-06 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
    * testsuite/reduce.cpp: Bug correction.

2003-01-06 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
    * blitz/generate/*.[h,cpp]: Update to ISO C++.
    * blitz/compiler/tempkey.cpp: Update to ISO C++ (and g++-3.4).
    * blitz/array-impl.h: Partial update to ISO C++ syntax (needed for g++-3.4).
    
Sat Dec 21 15:55:33 CET 2002 Patrick Guio <patrick.guio@fys.uio.no>
	* benchmarks/daxpy.cpp: prefer new C++ cast to old C style cast

2002-12-19  Julian Cummings  <cummings@artemis.cacr.caltech.edu>
	* blitz/meta/vecassign.h: Removed names of function arguments in
	the static methods of the _bz_meta_vecAssign<0,0> specialization
	to eliminate compiler warnings about unused variables.
	* blitz/array/eval.cc: Several changes to eliminate compiler
	warnings about unused variables.
	* testsuite/extract.cpp: Uncommented a couple of additional tests.
	* testsuite/free.cpp: Removed an unused variable.
	* blitz/range.h: Removed name of an unused function argument.
	* testsuite/module1.cpp: Removed an unused variable.

Tue Dec 17 16:23:11 CET 2002 Patrick Guio <patrick.guio@fys.uio.no>
	* benchmarks/acousticf2.f: fixed in commented test prog call to 
	echo_f77Tuned instead of echo_f77, duplicate echo_f77_set into echo_f77_set2
	to allow independant compilation of test prog
	* benchmarks/acou3df.f: added support for test prog 
	* benchmarks/acou3df2.f: added support for test prog, added explicit INTEGER
	declaration for i,j,k in subroutine acoustic3d_f77Tuned_stencil
	* benchmarks/acou3d.cpp: number of operations in variable Mflops corrected
	from 9 (in acoustic.cpp) to 11  
	* benchmarks/ctime3v.cpp benchmarks/ctime4v.cpp benchmarks/ctime5v.cpp: added
	necessary overloaded math functions for float type argument for gcc 2.95.3
	* benchmarks/ctime5.cpp: replaced in macro BZ_USING_NAMESPACE


Mon Dec 16 16:24:43 CET 2002 Patrick Guio <patrick.guio@fys.uio.no>