@@ -2,7 +2,7 @@
 # Written by Patrick Guio <patrick.guio@fys.uio.no>
 #
 
-SUBDIRS = . bin compiler blitz random src lib manual testsuite examples benchmarks demos
+SUBDIRS = bin compiler blitz random src lib manual testsuite examples benchmarks demos
 EXTRA_DIST = LEGAL LICENSE README.binutils config.h.in ChangeLog.1 
 
 demodir = $(prefix)/demos
